@startuml
title QueueService - Class Diagram

class QueueService {
  - channelQueues: Map<long, Deque<long>>
  - maxQueueSize: int
  + joinQueue(userId: long, channelId: long): QueueOutcome
  + leaveQueue(userId: long, channelId: long): QueueOutcome
  + showQueue(channelId: long): Set<long>
  + showMaxQueueSize(channelId: long): int
}

class CheckInService {
  + hasActiveSession(channelId: long): boolean
  + startCheckIn(channelId: long): CheckInSession
  + cancelAndGetRemainingUsers(channelId: long, userId: long): CancelResult
}

QueueService --> CheckInService : collaborates
QueueService --> Repository : persists queue metadata

@enduml
